--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 				<h2 class="main-heading">
 					Handmade for <br>your home
 				</h2>
-                <a href="file:///C:/Users/vijay%20kumar%20reddy/OneDrive/Documents/6TH%20SEMESTER/MINI%20PROJECT%20NISHITHA/login_n.html">
+                <a href="login_n.html">
                     <button class="btn">Signup & Login</button>
                 </a> 
 			</div>
